--- a/src/xy-theme.css
+++ b/src/xy-theme.css
@@ -27,7 +27,7 @@
   --xy-node-boxshadow-default:
     0px 3.54px 4.55px 0px rgba(255, 255, 255, 0.05),
     /* light shadow */ 0px 3.54px 4.55px 0px rgba(255, 255, 255, 0.13),
-    /* medium shadow */ 0px 0.51px 1.01px 0px rgba(255, 255, 255, 0.2); /* smallest shadow */
+    /* medium shadow */ 0px 0.51px 1.01px 0px #ffffff33; /* smallest shadow */
   --xy-theme-color-focus: #535353;
 }
  
